9/9/10 #2463, fix: use type=java in simulation.properties for Java sim test jars
9/9/10 #2497, use better/consistent variable names in createTestJar methods
9/9/10 remove '_' prefix in member data names for older code, so that convention is the same throughout
9/9/10 converted ArrayLists to use generics
9/9/10 #2492, first phase: prepare code related to jar creation for migration to phetcommon (not completed, not fully tested)
8/30/10 #2463, add simulation.properties support for all sim, which facilitates multiple sims per Flash project
8/30/10 change all Logger messages to level "info"
7/13/10 #2406, ensure that main frame size doesn't exceed primary display size
7/13/10 #2421, update URLs that changed with move to wicket-based website
7/13/10 #2436, consolidate all URLs and email addresses in TUConstants
7/13/10 fix contractions (eg "don't") in HTML strings that weren't rendering correctly 
5/28/10 #1506, problems with log4j, changed logging to java.util.logging
5/28/10 adhoc logging replaced with log4j by JO
4/1/10 changed "Brazilian Portuguese" to "Portuguese, Brazil" to be consistent with website (see #2250)
# 2.08.00 (39581) Apr 1, 2010
4/1/10 added locale "es_CO" for "Spanish, Colombia" (see #2244)
# 2.07.00 (39060) Mar 3, 2010
3/3/10 deprecate locale "no", it's the same as "nb" (see #2146)
# 2.06.00 (37959) Jan 8, 2010
1/8/10 fixes for languages that use preferred font + preferred font for Georgian
# 2.05.02 (37958) Jan 8, 2010
1/8/10 fix: use preferred font for target text areas, broken in eariler changes
# 2.05.01 (37909) Jan 5, 2010
1/5/10 #1891, add preferred fonts for Georgian (ka)
1/5/09 #2083, display font face names below the language names at the top of each column
# 2.05.00 (37895) Jan 5, 2010
1/5/10 #2075, change custom locale for Friulian from "fu_IT" to "fu"
# 2.04.00 (37830) Dec 30, 2009
12/30/09 #2075, add custom locale for "Friulian, Italy"
# 2.03.00 (36202) Oct 29, 2009
10/29/09 new production version with many enhancements and fixes